--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "alexa-app": "^3.2.0",
     "alexa-app-server": "^3.0.1",
     "bluebird": "^3.4.7",
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.16.1",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "hotswap": "^1.1.0",
