--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "hotswap": "^1.1.0",
     "lodash.defaults": "^4.2.0",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.2"
+    "mongoose": "^5.0.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
