--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
   "license": "MIT",
   "dependencies": {
     "alexa-app": "^3.2.0",
-    "alexa-app-server": "^3.0.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
+    "cors": "^2.8.4",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "hotswap": "^1.1.0",
     "lodash.defaults": "^4.2.0",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.2",
-    "path": "^0.12.7"
+    "mongoose": "^5.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
